inscripciones beta lista

--- a/app/templates/general.html
+++ b/app/templates/general.html
@@ -244,12 +244,12 @@
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input border border-dark" type="checkbox" id="switch1"
                                     style="border: 2px solid #000;">
-                                <label class="form-check-label" for="switch1">desactivar solicitudes de
+                                <label class="form-check-label" for="switch1">desactivar formulario de
                                     inscripción</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="checkbox" id="switch2">
-                                <label class="form-check-label" for="switch2">desactivar panel de inscripciones</label>
+                                <label class="form-check-label" for="switch2">desactivar pagina de inscripciones</label>
                             </div>
                         </div>
                     </div>
